Loose the inverting INEXACT_FETCH bounds assertion if the index is multi-key

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.2, v8.0, v7.0
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This tassert should be loosen a bit in the case of the query on the multikey field. As on just a couple of lines down the tassert, the tightness will be modified anyway if the query is on a multikey field.

            Assignee:
            Ruoxin Xu (Inactive)
            Reporter:
            Ruoxin Xu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: