SERVER-112492 Loosen the inverting INEXACT_FETCH bounds assertion if the index is multi-key (#42735)

GitOrigin-RevId: ca64f01284be9d671ac1ece4fcee66e068d46980